--- a/eppz!kit!testbed/user.plist
+++ b/eppz!kit!testbed/user.plist
@@ -4,14 +4,8 @@
 <dict>
 	<key>EPPZRepresentableClassName</key>
 	<string>EPPZGameUser</string>
-	<key>ID</key>
-	<string>A1FF321FED64</string>
 	<key>gameID</key>
 	<string>2</string>
-	<key>lastModificationDate</key>
-	<date>2013-08-22T16:44:33Z</date>
-	<key>name</key>
-	<string>Geri</string>
 	<key>progress</key>
 	<dict>
 		<key>EPPZRepresentableClassName</key>
@@ -20,9 +14,22 @@
 		<integer>5</integer>
 		<key>progress</key>
 		<integer>5</integer>
+		<key>view</key>
+		<dict>
+			<key>EPPZRepresentableClassName</key>
+			<string>UIView</string>
+			<key>bounds</key>
+			<string>{{0, 0}, {10, 10}}</string>
+			<key>center</key>
+			<string>{5, 5}</string>
+			<key>frame</key>
+			<string>{{-1, -1}, {12, 12}}</string>
+			<key>tag</key>
+			<integer>21</integer>
+			<key>transform</key>
+			<string>[1.2, 0, 0, 1.2, 0, 0]</string>
+		</dict>
 	</dict>
-	<key>registrationDate</key>
-	<date>2013-08-22T16:44:33Z</date>
 	<key>scores</key>
 	<array>
 		<integer>23</integer>
@@ -31,7 +38,5 @@
 		<integer>28</integer>
 		<integer>32</integer>
 	</array>
-	<key>serialNumber</key>
-	<integer>6</integer>
 </dict>
 </plist>
