--- a/eppz!kit!testbed/user.plist
+++ b/eppz!kit!testbed/user.plist
@@ -5,7 +5,7 @@
 	<key>__eppz.representable.class</key>
 	<string>EPPZGameUser</string>
 	<key>__eppz.representable.id</key>
-	<string>130198336</string>
+	<string>130540400</string>
 	<key>gameID</key>
 	<string>2</string>
 	<key>progress</key>
@@ -13,7 +13,7 @@
 		<key>__eppz.representable.class</key>
 		<string>EPPZGameProgress</string>
 		<key>__eppz.representable.id</key>
-		<string>130198928</string>
+		<string>130541680</string>
 		<key>level</key>
 		<integer>5</integer>
 		<key>progress</key>
@@ -23,19 +23,7 @@
 			<key>__eppz.representable.class</key>
 			<string>UIView</string>
 			<key>__eppz.representable.id</key>
-			<string>130198800</string>
-			<key>backgroundColor</key>
-			<string>UIColor:[0.000000, 0.000000, 1.000000, 1.000000]</string>
-			<key>bounds</key>
-			<string>CGRect:{{0, 0}, {100, 100}}</string>
-			<key>center</key>
-			<string>CGPoint:{50, 50}</string>
-			<key>frame</key>
-			<string>CGRect:{{-10, -10}, {120, 120}}</string>
-			<key>tag</key>
-			<integer>21</integer>
-			<key>transform</key>
-			<string>CGAffineTransform:[1.2, 0, 0, 1.2, 0, 0]</string>
+			<string>130539568</string>
 		</dict>
 	</dict>
 	<key>scores</key>
@@ -46,5 +34,24 @@
 		<integer>28</integer>
 		<integer>32</integer>
 	</array>
+	<key>view</key>
+	<dict>
+		<key>__eppz.representable.class</key>
+		<string>UIView</string>
+		<key>__eppz.representable.id</key>
+		<string>130539568</string>
+		<key>backgroundColor</key>
+		<string>UIColor:[0.200000, 0.400000, 0.800000, 0.600000]</string>
+		<key>bounds</key>
+		<string>CGRect:{{0, 0}, {100, 100}}</string>
+		<key>center</key>
+		<string>CGPoint:{50, 50}</string>
+		<key>frame</key>
+		<string>CGRect:{{-10, -10}, {120, 120}}</string>
+		<key>tag</key>
+		<integer>21</integer>
+		<key>transform</key>
+		<string>CGAffineTransform:[1.2, 0, 0, 1.2, 0, 0]</string>
+	</dict>
 </dict>
 </plist>
